added css design and font styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
 .container {
     text-align: center;
 }
+
+body {
+    background-image: url("https://hdwallsource.com/img/2014/7/journey-game-14423-14873-hd-wallpapers.jpg");
+    background-repeat: no-repeat;
+    background-attachment: center;
+    background-attachment: fixed;
+    background-size: cover;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+}
