saved background image in images folder and changed sourcing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: url("https://hdwallsource.com/img/2014/7/journey-game-14423-14873-hd-wallpapers.jpg");
+    background-image: url("../images/journey-game-14423-14873-hd-wallpapers.jpg");
     background-repeat: no-repeat;
     background-attachment: center;
     background-attachment: fixed;
