--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 h1 {
     text-align: center;
+    font-size: 60px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #divButton {
@@ -26,6 +28,20 @@ h1 {
     display: none;
 }
 
+#doneButton {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    background: rgba(3, 3, 3, 0.2);
+    border: none;
+    padding: 20px 50px;
+    transition: 0.5s;
+}
+
+#doneButton:hover {
+    background: rgba(255, 255, 255, 0.3);
+}
+
 #results {
     text-align: center;
     display: none;
@@ -38,6 +54,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 21px;
     font-weight: 500;
     margin: 0 auto;
 }
